[build] IJI-3499 migrate jvm-rules tests to JUnit4
Space-RevId: b37d06dc56cdb01a7331bd4aad442fb7564a7c75

GitOrigin-RevId: dadd55e1aab9f3a2e2aae9187feaf02f8fbc0055